Starting to personalize

--- a/index.html
+++ b/index.html
@@ -364,8 +364,8 @@
     <!-- Header with Names and Date -->
     <header>
         <div class="container">
-            <h1 class="names">Sarah & John</h1>
-            <p class="wedding-date">August 15, 2025</p>
+            <h1 class="names">Noam & Matan</h1>
+            <p class="wedding-date">May 16, 2025</p>
             
             <!-- Countdown Timer -->
             <div class="countdown">
@@ -397,7 +397,7 @@
             <div class="story-container">
                 <div class="story-timeline">
                     <div class="story-item">
-                        <div class="story-date">September 2019</div>
+                        <div class="story-date">April 2016</div>
                         <div class="story-content">
                             <h3>How We Met</h3>
                             <p>We met on a rainy Tuesday at a local coffee shop. Sarah was working on her laptop when John accidentally spilled his coffee nearby. What started as an awkward apology turned into a two-hour conversation about everything from travel dreams to favorite books.</p>
@@ -556,7 +556,7 @@
     <footer>
         <div class="container">
             <p class="footer-text">We can't wait to celebrate with you!</p>
-            <p>Sarah & John</p>
+            <p>Noam & Matan</p>
         </div>
     </footer>
 
@@ -569,7 +569,7 @@
         document.getElementById('photos-link').href = "https://photos.google.com/..."; // Google Photos
 
         // Countdown Timer
-        const weddingDate = new Date("August 15, 2025 15:00:00").getTime();
+        const weddingDate = new Date("May 16, 2025 11:30:00").getTime();
         
         function updateCountdown() {
             const now = new Date().getTime();
