--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
     <!-- Our Story Section -->
     <section id="our-story">
         <div class="container">
-            <h2 class="section-title">Our Story</h2>
+            <h2 class="section-title">הסיפור שלנו</h2>
             
             <div class="story-container">
                 <div class="story-timeline">
