--- a/index.html
+++ b/index.html
@@ -579,8 +579,8 @@
     <!-- JavaScript for Countdown Timer and Link Functionality -->
     <script>
         // Replace these with your actual links
-        document.getElementById('location-link').href = "https://maps.google.com/..."; // Google Maps link
-        document.getElementById('spotify-link').href = "https://open.spotify.com/..."; // Spotify playlist
+        document.getElementById('location-link').href = "https://maps.app.goo.gl/Jy1KQAMYBn7EULcL8"; // Google Maps link
+        document.getElementById('spotify-link').href = "https://open.spotify.com/playlist/54dBUhy0JQznuJvExyA0Wy?si=lyTyArRgRXO8GU2yjr_37w&pi=54EHAjAFScqXq"; // Spotify playlist
         document.getElementById('gifts-link').href = "https://paybox.com/..."; // Gifts/payment link
         document.getElementById('photos-link').href = "https://photos.google.com/..."; // Google Photos
 
