Added paybox link and photoalbum link

--- a/index.html
+++ b/index.html
@@ -581,8 +581,8 @@
         // Replace these with your actual links
         document.getElementById('location-link').href = "https://maps.app.goo.gl/Jy1KQAMYBn7EULcL8"; // Google Maps link
         document.getElementById('spotify-link').href = "https://open.spotify.com/playlist/54dBUhy0JQznuJvExyA0Wy?si=lyTyArRgRXO8GU2yjr_37w&pi=54EHAjAFScqXq"; // Spotify playlist
-        document.getElementById('gifts-link').href = "https://paybox.com/..."; // Gifts/payment link
-        document.getElementById('photos-link').href = "https://photos.google.com/..."; // Google Photos
+        document.getElementById('gifts-link').href = "https://payboxapp.page.link/VuLqB7jiWfh81iNx6"; // Gifts/payment link
+        document.getElementById('photos-link').href = "https://photos.app.goo.gl/MWfKMft3Rb1yUaez5"; // Google Photos
 
         // Countdown Timer
         const weddingDate = new Date("May 16, 2025 11:30:00").getTime();
