--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         
         /* Header Styles - Left to Right for English */
         header {
-            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/api/placeholder/1200/600') center/cover no-repeat;
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('greece.jpeg') center/cover no-repeat;
             height: 100vh;
             display: flex;
             flex-direction: column;
@@ -417,7 +417,7 @@
                                 נועם ארגנה עם חברה אחרת תכנית קטנה - החברה הייתה אמורה ללכת שלושתם ביחד למסיבה, אבל "במקרה" לא הצליחה להגיע ברגע האחרון. כך נשארנו לבד, וזו הייתה תחילתו של סיפור האהבה שלנו.
                             </p>
                             <div class="story-image">
-                                <img src="/api/placeholder/400/300" alt="היכרות שלנו">
+                                <img src="הכרות.jpg" alt="היכרות שלנו">
                             </div>
                         </div>
                     </div>
@@ -431,7 +431,7 @@
                                 חווינו יחד הרפתקאות, התמודדנו עם אתגרים, וגילינו צדדים חדשים אחד בשני. המסע המשותף חיזק את הקשר בינינו בדרך שאף טבעת לא הייתה יכולה לעשות, וחזרנו קרובים יותר מאי פעם.
                             </p>
                             <div class="story-image">
-                                <img src="/api/placeholder/400/300" alt="הטיול הגדול">
+                                <img src="הטיול הגדול.JPG" alt="הטיול הגדול">
                             </div>
                         </div>
                     </div>
@@ -448,7 +448,7 @@
                                 וכך, על רקע הנוף המרהיב של ים המלח, עם סטנדי מסתובב בהתרגשות סביבנו, מתן כרע ברך והציע לנועם להפוך את הסיפור המשותף שלנו לסיפור חיים.
                             </p>
                             <div class="story-image">
-                                <img src="/api/placeholder/400/300" alt="ההצעה">
+                                <img src="ההצעה.png" alt="ההצעה">
                             </div>
                         </div>
                     </div>
