--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         body {
             font-family: 'Heebo', 'Montserrat', sans-serif;
             line-height: 1.6;
-            color: #333;
+            color: #dadada;
             background-color: #f9f7f5;
             text-align: right;
         }
@@ -417,7 +417,7 @@
                                 נועם ארגנה עם חברה אחרת תכנית קטנה - החברה הייתה אמורה ללכת שלושתם ביחד למסיבה, אבל "במקרה" לא הצליחה להגיע ברגע האחרון. כך נשארנו לבד, וזו הייתה תחילתו של סיפור האהבה שלנו.
                             </p>
                             <div class="story-image">
-                                <img src="הכרות.jpg" alt="היכרות שלנו">
+                                <img src="הכרות.png" alt="היכרות שלנו">
                             </div>
                         </div>
                     </div>
