changed color of first page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         body {
             font-family: 'Heebo', 'Montserrat', sans-serif;
             line-height: 1.6;
-            color: #dadada;
+            color: #333;
             background-color: #f9f7f5;
             text-align: right;
         }
@@ -52,6 +52,7 @@
             font-size: 4rem;
             margin-bottom: 10px;
             font-weight: 700;
+            color: #fff
         }
         
         .wedding-date {
