--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                     <i class="fas fa-camera"></i>
                     <div class="link-title">אלבום תמונות</div>
                     <div class="link-desc">עזרו לנו ליצור את אלבום החתונה שלנו 
-                        שתפו את כל הרגעים המיוחדים שנוכל לחוות את החתונה דרך העיניים שלם</div>
+                        שתפו את כל הרגעים המיוחדים שנוכל לחוות את החתונה דרך העיניים שלכם</div>
                 </a>
             </div>
         </div>
