fixing some text

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                         <div class="story-content">
                             <h3>ההיכרות</h3>
                             <p>
-                                ועם ומתן למדו ביחד בשכבה ובכיתה י׳ גם באותה הקבצה בשיעורי אנגלית בבית הספר. לאחר כמה חודשים הוזמנו למסיבת יום הולדת של חברה משותפת. נועם הבחינה שמתן מעוניין בה, אבל משום מה הוא לא עשה שום צעד. אז היא החליטה לקחת יוזמה בדרך יצירתית. נועם ארגנה עם חברה אחרת תכנית קטנה - החברה סידרה שלושתם ביחד ילכו למסיבה, אבל "במקרה" לא הצליחה להגיע ברגע האחרון. כך נשארו לבד, בסוף הם בכלל לא נכנסו למסיבה והעבירו את כל הערב בשיחה ויום למחרת כבר נקבע ה ״דייט״ הרישמי                            </p>
+                                נועם ומתן למדו ביחד בשכבה ובכיתה י׳ גם באותה הקבצה בשיעורי אנגלית בבית הספר. לאחר כמה חודשים הוזמנו למסיבת יום הולדת של חברה משותפת. נועם הבחינה שמתן מעוניין בה, אבל משום מה הוא לא עשה שום צעד. אז היא החליטה לקחת יוזמה בדרך יצירתית. נועם ארגנה עם חברה אחרת תכנית קטנה - החברה סידרה שלושתם ביחד ילכו למסיבה, אבל "במקרה" לא הצליחה להגיע ברגע האחרון. כך נשארו לבד, בסוף הם בכלל לא נכנסו למסיבה והעבירו את כל הערב בשיחה ויום למחרת כבר נקבע ה ״דייט״ הרישמי                           </p>
                             <div class="story-image">
                                 <img src="הכרות.png" alt="היכרות שלנו">
                             </div>
@@ -489,7 +489,7 @@
                         <div class="story-content">
                             <h3>הטיול הגדול</h3>
                             <p>
-                                אחרי חמש שנים יחד, החליטו לצאת לטיול בדרום אמריקה. כולם חשבו שנועם תחזור עם טבעת, כולל היא עצמה .  אך למרות שהצעת נישואין לא הגיעה אז, הטיול העניק להם משהו חשוב לא פחות. חווינו יחד הרפתקאות, התמודדות עם אתגרים, וגילוי של צדדים חדשים אחד בשניה. המסע המשותף חיזק את הקשר בדרך שאף טבעת לא הייתה יכולה לעשות, והם קרובים יותר מאי פעם.
+                                אחרי חמש שנים יחד, החליטו לצאת לטיול בדרום אמריקה. כולם חשבו שנועם תחזור עם טבעת, כולל היא עצמה.  אך למרות שהצעת נישואין לא הגיעה אז, הטיול העניק להם משהו חשוב לא פחות. חווינו יחד הרפתקאות, התמודדות עם אתגרים, וגילוי של צדדים חדשים אחד בשניה. המסע המשותף חיזק את הקשר בדרך שאף טבעת לא הייתה יכולה לעשות, והם קרובים יותר מאי פעם.
                             </p>
                             <div class="story-image">
                                 <img src="הטיול הגדול.JPG" alt="הטיול הגדול">
