adding the footer back

--- a/index.html
+++ b/index.html
@@ -616,6 +616,14 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <p class="footer-text">אנחנו לא יכולים לחכות לחגוג איתכם!</p>
+            <p>נועם ומתן</p>
+        </div>
+    </footer>
     <!-- JavaScript for Countdown Timer and Link Functionality -->
     <script>
         // Replace these with your actual links
